# snp-guard

./: .gitignore  0001-build-direct-boot-ovmf.patch  Dockerfile  LICENSE  Makefile  README.md  changes-to-amd-common.diff  copy-additional-deps.sh  copy-kernel-modules.sh  dependencies.txt  deploy.sh  init.c  init.sh  install-dependencies.sh  launch.sh  openend2e-launch.sh  prepare-snp-dependencies.sh  run.mak  switch_to_new_root.sh
.github/workflows/: rust.yml
attestation/: attest-verity.sh
attestation_server/: Cargo.toml
attestation_server/examples/: vm-config.toml
attestation_server/src/: calc_expected_ld.rs  lib.rs  snp_attestation.rs  snp_validate_report.rs
attestation_server/test-data/: vcek.crt
convert-vm/: setup_integrity.sh  setup_verity.sh
create-vm-scripts/: create-new-vm.sh  template-user-data
docker/: Makefile  run.sh  snp-builder.dockerfile
docs/: MANUAL_BUILD.md
fs-scripts/: setup_luks.sh  setup_verity.sh
guest-vm/: common.sh  create-new-vm.sh  create-vm-config.sh  setup_integrity.sh  setup_luks.sh  setup_verity.sh  template-user-data
initramfs/: Dockerfile  build-initramfs-docker.sh  init.sh
patches/: 0001-update-launch-qemu.sh-to-enable-OVMF-kernel-hashes.patch  README.md
scripts/: build-initramfs-docker.sh  build-initramfs.sh  build-packages.sh  local-build.sh
snp-builder/: Makefile  build-packages.sh  dependencies.txt  run.sh  snp-builder.dockerfile  snpguard-stable-commits.txt
snp-builder/patches/: 0001-common.sh-allow-checkout-from-commit-based-on-date.patch  0001-mapping-ports-22-2222-and-80-8080.patch  0001-mount-secondary-hard-disk.patch  README.md
tools/attestation_server/: Cargo.toml
tools/attestation_server/examples/: vm-config.toml
tools/attestation_server/src/: calc_expected_ld.rs  req_resp_ds.rs  snp_attestation.rs  snp_validate_report.rs
tools/attestation_server/test-data/: benign-report.json  test_auth_key.pem  test_id_key.pem
