[package]
name = "attestation_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server/server_main.rs"

[[bin]]
name = "client"
path = "src/bin/client/client_main.rs"

[[bin]]
name = "config-generator"
path = "src/bin/config_generator/config_generator_main.rs"

[[bin]]
name = "idblock-generator"
path = "src/bin/idblock_generator/idblock_generator_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version="0.11.26", features = ["blocking","json"] }
# sev = { version="3.1.1", features=["openssl"] }
sev = {git = "https://github.com/its-luca/sev.git", branch = "dev", features=["openssl"] }
ring = "0.17.8"
hex = "0.4.3"
clap = { version = "4.5.3", features = ["derive"] }
snafu = "0.8.2"
base64 = "0.22.0"
bincode = "1.3.3"
openssl = "0.10.64"
